fix misalignment of livestream

--- a/txlege84/static/scss/components/landing-modules/_livestream.scss
+++ b/txlege84/static/scss/components/landing-modules/_livestream.scss
@@ -4,10 +4,19 @@ $ls-small: new-breakpoint(min-width 695px max-width 799px);
   @include clearfix;
 
   .watch {
+
+    .chamber:last-child {
+      margin-top: 1.5em;
+    }
+
     @include media($ls-small) {
       .chamber {
         @include span-columns(6);
         @include omega(2n);
+
+        .chamber:last-child {
+          margin-top: 0;
+        }
       }
     }
 
@@ -15,12 +24,13 @@ $ls-small: new-breakpoint(min-width 695px max-width 799px);
       .chamber {
         @include span-columns(6);
         @include omega(2n);
+
+        .chamber:last-child {
+          margin-top: 0;
+        }
       }
     }
 
-    .chamber:last-child {
-      margin-top: 1.5em;
-    }
   }
 
 }
